Subida: actualizaciones locales